--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,6 +1,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<!-- A link to the AOS CDN library -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet" />
 <!-- Favicon -->
 <!-- <link rel="shortcut icon" href="{{root}}/assets/images/favicon.ico" type="image/x-icon" /> -->
 
